--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 	<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Evergreen Mobile App REST API</title>
+    <title>Evergreen REST API</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="media/css/restdown.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 </head>
 <body>
 <div id="header">
-    <h1>Evergreen Mobile App REST API Documentation</h1>
+    <h1>Evergreen REST API Documentation</h1>
 </div>
 
     <div id="sidebar">
