buff up description

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 <div class="intro">
 
 
-<p>This is the description for the REST interface between an application (mobile or web)
- and the server. Each site can </p>
+<p>	This is the description for the REST interface between an application (mobile or web) and the server. Each site can act as a 'device' and have an Evergreen wallet for each of it's users. It can also allow Evergreen users to withdraw from the account to the wallet. This is an easy way of implementing an internal fee-free marketplace.</p>
 
 <h3>All API calls start with</h3>
 
